<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosgraph_monitor_test</name>
  <version>0.1.0</version>
  <description>Test package for rosgraph_monitor containing launch tests and test utilities</description>
  <maintainer email="troy@polymathrobotics.com">Troy Gibb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rosgraph_monitor</depend>
  <depend>rosgraph_monitor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch_ros</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>rmw_implementation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
